[package]
authors = ["SeongHoon Wee <mrgravity817@gmail.com>"]
edition = "2018"
name = "actix-practice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4.1"
actix-web = {version = "3", features = ["openssl"]}
derive_more = "0.99.16"
env_logger = "0.9.0"
futures = "0.3"
openssl = {version = "0.10"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
